# mdify

./: .env.example  .gitignore  CONTRIBUTION.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  celery_app.py  config.py  exceptions.py  main.py
backend/src/AssetContext/: __init__.py  formatters.py  packager.py
backend/src/IngestionContext/: routers.py  sandbox.py  scanner.py  stats.py  tracker.py  validator.py
backend/src/ParsingContext/: __init__.py  tasks.py
backend/src/ParsingContext/adapters/: __init__.py  markitdown.py  pdf.py
backend/tests/: conftest.py
backend/tests/contract/: test_endpoints.py
backend/tests/integration/: test_batch_concurrency.py  test_cleanup.py  test_sse.py  test_virus_scan.py
backend/tests/unit/: test_batch.py  test_exceptions.py  test_parsing.py  test_pdf_images.py  test_security_validator.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: BackgroundLayer.tsx  CommandLinePalette.tsx  ProgressTimeline.tsx  UploadDashboard.tsx
frontend/src/hooks/: useConversionTask.ts
frontend/tests/e2e/: test_conversion_happy_path.spec.ts  test_security_rejection.spec.ts
frontend/tests/e2e/fixtures/: sample.txt
