[tool.poetry]
name = "mdify-backend"
version = "0.1.0"
description = "Universal File-to-Markdown Converter backend"
authors = ["Speckit <dev@mdify.io>"]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
markitdown = "^0.1.6"
pypdf = {extras = ["image"], version = "^4.2.0"}
pdfplumber = "^0.11.0"
clamd = "^1.0.2"
defusedxml = "^0.7.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
black = "^24.4.0"
bandit = "^1.7.8"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "N", "S", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
